Fix FooterNav text align

--- a/src/Components/FooterNav.css
+++ b/src/Components/FooterNav.css
@@ -49,4 +49,8 @@
         justify-content: center;
     }
 
+    .FooterNav{
+        text-align: center;
+    }
+
 }
